--- a/style.css
+++ b/style.css
@@ -115,3 +115,13 @@ img{
     height: 30px;
     border-radius: 50%;
 }
+
+@media only screen and (max-width: 600px) {
+    .calculator {
+        width: 80%; 
+    }
+    button {
+        width: 17%;
+        margin: 7px;
+    }
+}
